--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.3",
     "node": "^20.12.0",
+    "nodejs": "^0.0.0",
     "nodemon": "^3.1.0"
   }
 }
