Updating Database Cloud Service

--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
-DB_HOST=bojnkzplhsictgxrptzr-mysql.services.clever-cloud.com
-DB_DBNAME=bojnkzplhsictgxrptzr
-DB_USERNAME=uoa0r7lv0e9zj8dc
-DB_PASSWORD=279G8IHiImlBI4c70cYG
+DB_HOST=sql10.freesqldatabase.com
+DB_DBNAME=sql10695938
+DB_USERNAME=sql10695938
+DB_PASSWORD=bTscVwYTPl
