--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,2 @@
 MONGO=mongodb+srv://nathan02abreu:62aidLBBqbr1EINL@cluster0.rrzzg9d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+REACT_APP_API_URL = https://stacker-backend-s4ru.onrender.com
