Fix: Ajustando path do Vercel.

--- a/Server/.env
+++ b/Server/.env
@@ -1,2 +1,3 @@
 MONGO=mongodb+srv://nathan02abreu:62aidLBBqbr1EINL@cluster0.rrzzg9d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-REACT_APP_API_URL = https://stacker-backend-s4ru.onrender.com
+ENV = PROD
+REACT_APP_API_URL = https://stacker-backend.vercel.app
