--- a/Server/.env.development
+++ b/Server/.env.development
@@ -1,3 +1,5 @@
 MONGO=mongodb+srv://nathan02abreu:62aidLBBqbr1EINL@cluster0.rrzzg9d.mongodb.net/stackerDB?retryWrites=true&w=majority&appName=Cluster0
-ENV = PROD
-REACT_APP_API_URL = 3001
+ENV=Dev
+REACT_APP_API_URL=http://localhost:3001/
+
+
