--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^3.0.4",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
